--- a/css/main.css
+++ b/css/main.css
@@ -500,10 +500,20 @@ footer .content-wrapper{
     
 }
 
-.map {
-    /**height:200px;**/
-    background: url('../img/about-map.jpg') center no-repeat #333;
-    background-size:cover;
+.map figure {
+    width: 100%;
+    height: 0; 
+    padding-bottom: 125%; 
+    overflow: hidden;
+    position: relative;
+}
+ 
+.map iframe {
+    width: 100%;
+    height: 100%;
+    position: absolute; 
+    top: 0; 
+    left: 0; 
 }
 
 .content-section {
@@ -932,6 +942,10 @@ input[type=button] {
         text-align: justify;
     }
     
+    .map figure {
+        padding-bottom: 46%; 
+    }
+
     .content-section{
         display:flex;
         justify-content: center;
@@ -1128,9 +1142,13 @@ input[type=button] {
         line-height: 1.5em;
 }
     
+    .map figure {
+        padding-bottom: 38%; 
+    } 
+    
     .content-section p {
-    font-size: 1.13em;
-    line-height: 1.5em;
+        font-size: 1.13em;
+        line-height: 1.5em;
 }
     
     
