--- a/css/main.css
+++ b/css/main.css
@@ -128,6 +128,7 @@ a {
 h1{
     font-family: 'Poppins', sans-serif;
     font-size:2.25em;
+    line-height: 1.2;
     color: #e2e3ed;
     font-weight:500;
 } 
@@ -205,25 +206,26 @@ header figure{
 
 .header-divider{
     width:100%;
-    border-top:1px #3a3a3a solid;
+    height: 1px;
+    background-color: #3a3a3a;
+    margin: 10px 0 20px 0;
 }
 
 header nav{
     width: 60%;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
    
 }
 
 header nav ul{
-    width: 60%;
+    width: 100%;
     padding: 0;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     flex-direction: row;
-    padding: 20px 0 0 0;
     margin: 0;
     
 }
@@ -265,8 +267,15 @@ header{
 .hero-area h1{
     margin:0px;
     padding:22px 0;
-    width:82%;
-    font-size: 2.25em;
+   /** font-size: 2.25em;**/
+}
+
+header .content-wrapper {
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
 }
 
 /***Subscription area***/
@@ -318,6 +327,7 @@ aside{
 
 .features{
     display: flex;
+    justify-content: center;
     flex-flow:row wrap;
     padding:45px 0;
     background: url('../img/camping-photo.jpg') center no-repeat #333;
@@ -335,7 +345,7 @@ aside{
     display:flex;
     justify-content: center;
     align-items: center;
-    width:55%;
+    width:65%;
     flex-flow:row wrap;
     padding:0 0 20px 0;
 }
@@ -346,7 +356,7 @@ aside{
     justify-content: center;
     align-items: flex-start;
     flex-flow: row wrap;
-    width:55%;
+    
     
 }
 
@@ -387,7 +397,7 @@ aside{
 
 
 .reviews h2{
-    width:49%;
+    
     margin:0px;
     padding: 26px 0; 
 }
@@ -434,10 +444,7 @@ footer .content-wrapper{
 }
 
 .footer-content{
-    display:flex;
-    justify-content: flex-start;
-    align-items: center;
-    flex-flow: column wrap;
+    width:100%;
     padding:30px 0 0 0;
     
 }
@@ -461,9 +468,32 @@ footer .content-wrapper{
     display:flex;
     justify-content: center;
     align-items: center;
-    flex-flow:column;
+    flex-flow:row wrap;
     
 }
+
+.social-icons{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+
+.social-icons p{
+    margin:0; 
+}
+
+.social-icons i{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 2.5em;
+    height: 2.5em;
+    border-radius: 1.25em;
+    background-color: #527158;
+    font-size: 1.25em;
+    color: #e2e3ed;
+}
+
 
 .copyright{
     display:flex;
@@ -595,9 +625,6 @@ MOBILE FAQ PAGE
 
 /*========================================================================== */
 
-aside .form {
-  margin-top: 30px;
-}
  
 input[type=text] {
       box-sizing: border-box;
@@ -729,6 +756,7 @@ input[type=button] {
 
     h1{
         font-size:3em;
+        line-height: 1;
 
     } 
 
@@ -759,17 +787,16 @@ input[type=button] {
         padding:30px 0;
     }
     header .content-wrapper{
-        justify-content: flex-start;
+       /** width:100%;**/
+        justify-content: space-between;
     }
     
     header figure{
         width:30%;
-        padding:0px;
-        margin:0px;
     }
     
     header nav{
-        width: 17%;        
+        width: 20%;        
     }
     
     header nav ul{
@@ -778,12 +805,11 @@ input[type=button] {
     
     header nav ul li{
         justify-content: space-between;
-        width:17%;
+        width:20%;
     }
     
     .header-divider{
-        width:50%;
-        border:none;
+        display: none;
     }
     
         
@@ -791,9 +817,6 @@ input[type=button] {
     
     /********TABLET HERO AREA STYLES**********/
     
-    .content-wrapper {
-        max-width: 960px;
-    }
 
     
     .hero-area{
@@ -801,7 +824,8 @@ input[type=button] {
         min-height: 600px;
     }
     .hero-area h1{
-        width:70%;
+        padding:63px 0;
+       /** width:70%;**/
         
     }
     
@@ -812,7 +836,7 @@ input[type=button] {
     /*Tablet subscription area*/
     aside .content-wrapper{
         flex-flow:row nowrap;
-        justify-content: space-between;
+        justify-content: space-around;
         align-items: baseline;
     }
     
@@ -904,10 +928,10 @@ input[type=button] {
     }
     
     .footer-content{
+        display: flex;
         justify-content: space-around;
         flex-flow: row nowrap;
         padding:0px;
-        width:inherit;
         align-items: flex-start;
     }
     
@@ -996,20 +1020,16 @@ input[type=button] {
 
 @media screen and (min-width: 1200px) {
 
+    
 /*******DESKTOP HEADER STYLES*******/
 
     header{
-        padding:25px 0;
+        padding:15px 0;
     }
     
-    header figure{
-        width:24%;
-        padding:0px;
-        margin:0px;
-    }    
     
     header nav{
-        width:12%;
+        width:20%;
     }
     
     header nav ul{
@@ -1021,15 +1041,15 @@ input[type=button] {
         width:12%;
     }
     
-    .header-divider{
-        width:60%;
-        border:none;
-    }
     /*******DESKTOP HERO AREA*******/
     
     .hero-area{
         padding-top:27px;
-        min-height: 775px;
+        /*min-height: 775px;/*/
+    }
+    
+    .content-wrapper {
+      max-width: 960px;
     }
     
     
@@ -1067,15 +1087,16 @@ input[type=button] {
     
     
     .hero-area h1{
-        width:55%;
+        
     }
     
     /***Desktop subscription area****/
     aside .content-wrapper{
         flex-flow:row nowrap;
+        justify-content: space-around;
     }
     .form-description, .form{
-        width:45%;
+        width:30%;
     }
         
     /***Desktop features area***/
@@ -1130,7 +1151,6 @@ input[type=button] {
         justify-content: space-between;
         flex-flow: row nowrap;
         padding:0px;
-        width:inherit;
     }
     
     .copyright p {
